# ClassDictMeta.py

./: ReadMe.md  pyproject.toml
ClassDictMeta/: __init__.py
