[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3",]
build-backend = "setuptools.build_meta"

[project]
name = "ClassDictMeta"
authors = [{name = "KOLANICH"}]
description = "A damn simple metaclass for defining classes conveniently."
readme = "ReadMe.md"
keywords = ["package", "location"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/ClassDictMeta.py"

[tool.setuptools]
zip-safe = true
packages = ["ClassDictMeta"]
include-package-data = false

[tool.setuptools_scm]
